fix news tiles size on IE

--- a/assets/sass/molecules/_teaser-news.scss
+++ b/assets/sass/molecules/_teaser-news.scss
@@ -11,6 +11,8 @@
 
   &.teaser-fullclick {
     display: flex;
+    flex: 1 1 auto;
+    width: 100%;
   }
 
   .news-heading {
